//
// Copyright 2023 The Project Oak Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package oak.containers.example;

import "proto/session/session.proto";
import "proto/micro_rpc/options.proto";

/// The interface that exposes the trusted application via an encrypted channel.
service TrustedApplication {
  // method_id: 35
  rpc OakSession(oak.session.v1.SessionRequest)
      returns (oak.session.v1.SessionResponse) {
    option (.oak.micro_rpc.method_id) = 35;
  }
}
